force-app/main/default/objects/sfcma__StripeMockResponseHeader__c/sfcma__StripeMockResponseHeader__c.object-meta.xml
<CustomObject>
    <description>For internal use by Salesforce.</description>
    <label>Checkout Stripe Mock Response Header</label>
    <nameField>
        <displayFormat>SMRH-{0000}</displayFormat>
        <label>Checkout Stripe Mock Response Header Nam</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checkout Stripe Mock Response Headers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>