force-app/main/default/objects/sfcma__StripeMockResponseHeader__c/fields/sfcma__Key__c.field-meta.xml
<CustomField>
    <fullName>sfcma__Key__c</fullName>
    <label>Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>