force-app/main/default/objects/sfcma__StripeMockResponseHeader__c/fields/sfcma__StripeMockResponse__c.field-meta.xml
<CustomField>
    <fullName>sfcma__StripeMockResponse__c</fullName>
    <label>Stripe Mock Response</label>
    <referenceTo>sfcma__StripeMockResponse__c</referenceTo>
    <relationshipLabel>Stripe Mock Response Headers</relationshipLabel>
    <relationshipName>StripeMockResponseHeaders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>