force-app/main/default/objects/sfcma__StripeMockResponseHeader__c/fields/sfcma__Value__c.field-meta.xml
<CustomField>
    <fullName>sfcma__Value__c</fullName>
    <label>Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>